git commit -m "com"

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ form label, form input, form textarea {
     width: 100%;
     max-width: 400px;
     margin: 10px 0;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 form input, form textarea {
